crates/perl-lsp/tests/snapshots/lsp_capability_snapshot_test__code_action_kinds.snap
---
source: crates/perl-lsp/tests/lsp_capability_snapshot_test.rs
expression: "&kinds"
---
- quickfix
- source.organizeImports
- refactor.extract
