crates/perl-lsp/tests/snapshots/lsp_capability_snapshot_test__completion_trigger_characters.snap
---
source: crates/perl-lsp/tests/lsp_capability_snapshot_test.rs
expression: "&triggers"
---
- $
- "@"
- "%"
- ">"
- ":"
