crates/perl-lsp/tests/snapshots/lsp_capability_snapshot_test__semantic_tokens_legend_from_capabilities.snap
---
source: crates/perl-lsp/tests/lsp_capability_snapshot_test.rs
assertion_line: 119
expression: "&legend"
---
tokenModifiers:
  - declaration
  - definition
  - readonly
  - static
  - deprecated
  - abstract
  - async
  - modification
  - documentation
  - defaultLibrary
  - scalarVariable
  - arrayVariable
  - hashVariable
tokenTypes:
  - namespace
  - type
  - class
  - interface
  - enum
  - enumMember
  - typeParameter
  - function
  - method
  - property
  - macro
  - variable
  - parameter
  - keyword
  - modifier
  - comment
  - string
  - number
  - regexp
  - operator
  - sql_string
