crates/perl-lsp/tests/snapshots/lsp_capability_snapshot_test__server_capabilities_minimal_client.snap
---
source: crates/perl-lsp/tests/lsp_capability_snapshot_test.rs
assertion_line: 34
expression: caps
---
callHierarchyProvider: true
codeActionProvider:
  codeActionKinds:
    - quickfix
    - source.organizeImports
    - refactor.extract
  resolveProvider: true
codeLensProvider:
  resolveProvider: true
colorProvider: true
completionProvider:
  resolveProvider: true
  triggerCharacters:
    - $
    - "@"
    - "%"
    - ">"
    - ":"
    - "-"
declarationProvider: true
definitionProvider: true
diagnosticProvider:
  identifier: perl-lsp
  interFileDependencies: false
  workspaceDiagnostics: true
documentFormattingProvider: true
documentHighlightProvider: true
documentLinkProvider:
  resolveProvider: true
documentOnTypeFormattingProvider:
  firstTriggerCharacter: "}"
  moreTriggerCharacter:
    - ;
    - "\n"
documentRangeFormattingProvider: true
documentSymbolProvider: true
executeCommandProvider:
  commands:
    - perl.runTests
    - perl.runFile
    - perl.runTestSub
    - perl.runCritic
    - perl.runTest
    - perl.runTestFile
    - perl.runSubtest
    - perl.debugFile
    - perl.debugTest
    - perl.goToTest
    - perl.goToImplementation
experimental:
  inlineCompletionProvider: {}
foldingRangeProvider: true
hoverProvider: true
implementationProvider: true
inlayHintProvider:
  resolveProvider: true
inlineValueProvider: true
linkedEditingRangeProvider: true
monikerProvider: true
notebookDocumentSync:
  notebookSelector:
    - cells:
        - language: perl
      notebook: jupyter-notebook
  save: true
positionEncoding: utf-16
referencesProvider: true
renameProvider:
  prepareProvider: true
selectionRangeProvider: true
semanticTokensProvider:
  full: true
  legend:
    tokenModifiers:
      - declaration
      - definition
      - readonly
      - static
      - deprecated
      - abstract
      - async
      - modification
      - documentation
      - defaultLibrary
      - scalarVariable
      - arrayVariable
      - hashVariable
    tokenTypes:
      - namespace
      - type
      - class
      - interface
      - enum
      - enumMember
      - typeParameter
      - function
      - method
      - property
      - macro
      - variable
      - parameter
      - keyword
      - modifier
      - comment
      - string
      - number
      - regexp
      - operator
      - sql_string
  range: true
signatureHelpProvider:
  retriggerCharacters:
    - ","
    - "@"
    - "%"
    - "{"
    - "["
  triggerCharacters:
    - (
    - ","
textDocumentSync:
  change: 1
  openClose: true
  save:
    includeText: true
  willSave: true
  willSaveWaitUntil: true
typeDefinitionProvider: true
typeHierarchyProvider: true
workspace:
  fileOperations:
    didCreate:
      filters:
        - pattern:
            glob: "**/*.pl"
        - pattern:
            glob: "**/*.pm"
        - pattern:
            glob: "**/*.t"
        - pattern:
            glob: "**/*.psgi"
    didDelete:
      filters:
        - pattern:
            glob: "**/*.pl"
        - pattern:
            glob: "**/*.pm"
        - pattern:
            glob: "**/*.t"
        - pattern:
            glob: "**/*.psgi"
    didRename:
      filters:
        - pattern:
            glob: "**/*.pl"
        - pattern:
            glob: "**/*.pm"
        - pattern:
            glob: "**/*.t"
        - pattern:
            glob: "**/*.psgi"
    willCreate:
      filters:
        - pattern:
            glob: "**/*.pl"
        - pattern:
            glob: "**/*.pm"
        - pattern:
            glob: "**/*.t"
        - pattern:
            glob: "**/*.psgi"
    willDelete:
      filters:
        - pattern:
            glob: "**/*.pl"
        - pattern:
            glob: "**/*.pm"
        - pattern:
            glob: "**/*.t"
        - pattern:
            glob: "**/*.psgi"
    willRename:
      filters:
        - pattern:
            glob: "**/*.pl"
        - pattern:
            glob: "**/*.pm"
        - pattern:
            glob: "**/*.t"
        - pattern:
            glob: "**/*.psgi"
  textDocumentContent:
    schemes:
      - perldoc
  workspaceFolders:
    changeNotifications: true
    supported: true
workspaceSymbolProvider:
  resolveProvider: true
